// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SortableBarChartCard /> renders properly ordered stats when ordering is set 1`] = `
<div
  class="card"
  role="document"
>
  <div
    class="chart-card__header card-header"
  >
    Foo
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Order by
        </button>
        <div
          aria-hidden="true"
          class="w-100 ordering-dropdown__menu--link dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Name
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-wide-short ordering-dropdown__sort-icon"
              data-icon="arrow-up-wide-short"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 288h-95.1c-17.67 0-32 14.33-32 32s14.33 32 32 32H416c17.67 0 32-14.33 32-32S433.7 288 416 288zM352 416h-32c-17.67 0-32 14.33-32 32s14.33 32 32 32h32c17.67 0 31.1-14.33 31.1-32S369.7 416 352 416zM480 160h-159.1c-17.67 0-32 14.33-32 32s14.33 32 32 32H480c17.67 0 32-14.33 32-32S497.7 160 480 160zM544 32h-223.1c-17.67 0-32 14.33-32 32s14.33 32 32 32H544c17.67 0 32-14.33 32-32S561.7 32 544 32zM151.6 41.95c-12.12-13.26-35.06-13.26-47.19 0l-87.1 96.09C4.475 151.1 5.35 171.4 18.38 183.3c6.141 5.629 13.89 8.414 21.61 8.414c8.672 0 17.3-3.504 23.61-10.39L96 145.9v302C96 465.7 110.3 480 128 480s32-14.33 32-32.03V145.9L192.4 181.3C204.4 194.3 224.6 195.3 237.6 183.3c13.03-11.95 13.9-32.22 1.969-45.27L151.6 41.95z"
                fill="currentColor"
              />
            </svg>
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Amount
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i>
              Clear selection
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card-body"
  >
    <canvas
      height="0"
      role="img"
      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
      width="0"
    />
  </div>
</div>
`;

exports[`<SortableBarChartCard /> renders properly ordered stats when ordering is set 2`] = `
<div
  class="card"
  role="document"
>
  <div
    class="chart-card__header card-header"
  >
    Foo
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Order by
        </button>
        <div
          aria-hidden="true"
          class="w-100 ordering-dropdown__menu--link dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Name
          </button>
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Amount
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-wide-short ordering-dropdown__sort-icon"
              data-icon="arrow-up-wide-short"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 288h-95.1c-17.67 0-32 14.33-32 32s14.33 32 32 32H416c17.67 0 32-14.33 32-32S433.7 288 416 288zM352 416h-32c-17.67 0-32 14.33-32 32s14.33 32 32 32h32c17.67 0 31.1-14.33 31.1-32S369.7 416 352 416zM480 160h-159.1c-17.67 0-32 14.33-32 32s14.33 32 32 32H480c17.67 0 32-14.33 32-32S497.7 160 480 160zM544 32h-223.1c-17.67 0-32 14.33-32 32s14.33 32 32 32H544c17.67 0 32-14.33 32-32S561.7 32 544 32zM151.6 41.95c-12.12-13.26-35.06-13.26-47.19 0l-87.1 96.09C4.475 151.1 5.35 171.4 18.38 183.3c6.141 5.629 13.89 8.414 21.61 8.414c8.672 0 17.3-3.504 23.61-10.39L96 145.9v302C96 465.7 110.3 480 128 480s32-14.33 32-32.03V145.9L192.4 181.3C204.4 194.3 224.6 195.3 237.6 183.3c13.03-11.95 13.9-32.22 1.969-45.27L151.6 41.95z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i>
              Clear selection
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card-body"
  >
    <canvas
      height="0"
      role="img"
      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
      width="0"
    />
  </div>
</div>
`;

exports[`<SortableBarChartCard /> renders properly ordered stats when ordering is set 3`] = `
<div
  class="card"
  role="document"
>
  <div
    class="chart-card__header card-header"
  >
    Foo
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Order by
        </button>
        <div
          aria-hidden="true"
          class="w-100 ordering-dropdown__menu--link dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Name
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-wide-short ordering-dropdown__sort-icon"
              data-icon="arrow-up-wide-short"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 288h-95.1c-17.67 0-32 14.33-32 32s14.33 32 32 32H416c17.67 0 32-14.33 32-32S433.7 288 416 288zM352 416h-32c-17.67 0-32 14.33-32 32s14.33 32 32 32h32c17.67 0 31.1-14.33 31.1-32S369.7 416 352 416zM480 160h-159.1c-17.67 0-32 14.33-32 32s14.33 32 32 32H480c17.67 0 32-14.33 32-32S497.7 160 480 160zM544 32h-223.1c-17.67 0-32 14.33-32 32s14.33 32 32 32H544c17.67 0 32-14.33 32-32S561.7 32 544 32zM151.6 41.95c-12.12-13.26-35.06-13.26-47.19 0l-87.1 96.09C4.475 151.1 5.35 171.4 18.38 183.3c6.141 5.629 13.89 8.414 21.61 8.414c8.672 0 17.3-3.504 23.61-10.39L96 145.9v302C96 465.7 110.3 480 128 480s32-14.33 32-32.03V145.9L192.4 181.3C204.4 194.3 224.6 195.3 237.6 183.3c13.03-11.95 13.9-32.22 1.969-45.27L151.6 41.95z"
                fill="currentColor"
              />
            </svg>
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Amount
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i>
              Clear selection
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card-body"
  >
    <canvas
      height="0"
      role="img"
      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
      width="0"
    />
  </div>
</div>
`;

exports[`<SortableBarChartCard /> renders properly ordered stats when ordering is set 4`] = `
<div
  class="card"
  role="document"
>
  <div
    class="chart-card__header card-header"
  >
    Foo
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Order by
        </button>
        <div
          aria-hidden="true"
          class="w-100 ordering-dropdown__menu--link dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Name
          </button>
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Amount
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up-wide-short ordering-dropdown__sort-icon"
              data-icon="arrow-up-wide-short"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 288h-95.1c-17.67 0-32 14.33-32 32s14.33 32 32 32H416c17.67 0 32-14.33 32-32S433.7 288 416 288zM352 416h-32c-17.67 0-32 14.33-32 32s14.33 32 32 32h32c17.67 0 31.1-14.33 31.1-32S369.7 416 352 416zM480 160h-159.1c-17.67 0-32 14.33-32 32s14.33 32 32 32H480c17.67 0 32-14.33 32-32S497.7 160 480 160zM544 32h-223.1c-17.67 0-32 14.33-32 32s14.33 32 32 32H544c17.67 0 32-14.33 32-32S561.7 32 544 32zM151.6 41.95c-12.12-13.26-35.06-13.26-47.19 0l-87.1 96.09C4.475 151.1 5.35 171.4 18.38 183.3c6.141 5.629 13.89 8.414 21.61 8.414c8.672 0 17.3-3.504 23.61-10.39L96 145.9v302C96 465.7 110.3 480 128 480s32-14.33 32-32.03V145.9L192.4 181.3C204.4 194.3 224.6 195.3 237.6 183.3c13.03-11.95 13.9-32.22 1.969-45.27L151.6 41.95z"
                fill="currentColor"
              />
            </svg>
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i>
              Clear selection
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card-body"
  >
    <canvas
      height="0"
      role="img"
      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
      width="0"
    />
  </div>
</div>
`;

exports[`<SortableBarChartCard /> renders properly paginated stats when pagination is set 1`] = `
<div
  class="card"
  role="document"
>
  <div
    class="chart-card__header card-header"
  >
    Foo
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Order by
        </button>
        <div
          aria-hidden="true"
          class="w-100 ordering-dropdown__menu--link dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Name
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Amount
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="disabled dropdown-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <i>
              Clear selection
            </i>
          </button>
        </div>
      </div>
    </div>
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 me-3 dropdown-toggle btn btn-link"
          type="button"
        >
          Paginate
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              50
            </b>
             items per page
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              100
            </b>
             items per page
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              200
            </b>
             items per page
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              500
            </b>
             items per page
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i>
              Clear pagination
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card-body"
  >
    <canvas
      height="0"
      role="img"
      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
      width="0"
    />
  </div>
  <div
    class="chart-card__footer--sticky card-footer"
  >
    <nav
      aria-label="pagination"
      class=""
    >
      <ul
        class="flex-wrap mb-0 simple-paginator justify-content-center pagination"
      >
        <li
          class="page-item disabled"
        >
          <span
            aria-label="Previous"
            class="page-link"
          >
            <span
              aria-hidden="true"
            >
              ‹
            </span>
            <span
              class="visually-hidden"
            >
              Previous
            </span>
          </span>
        </li>
        <li
          class="page-item active"
        >
          <span
            class="page-link"
            role="link"
          >
            1
          </span>
        </li>
        <li
          class="page-item"
        >
          <span
            class="page-link"
            role="link"
          >
            2
          </span>
        </li>
        <li
          class="page-item"
        >
          <span
            class="page-link"
            role="link"
          >
            3
          </span>
        </li>
        <li
          class="page-item"
        >
          <span
            class="page-link"
            role="link"
          >
            4
          </span>
        </li>
        <li
          class="page-item"
        >
          <span
            aria-label="Next"
            class="page-link"
          >
            <span
              aria-hidden="true"
            >
              ›
            </span>
            <span
              class="visually-hidden"
            >
              Next
            </span>
          </span>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<SortableBarChartCard /> renders properly paginated stats when pagination is set 2`] = `
<div
  class="card"
  role="document"
>
  <div
    class="chart-card__header card-header"
  >
    Foo
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Order by
        </button>
        <div
          aria-hidden="true"
          class="w-100 ordering-dropdown__menu--link dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Name
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Amount
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="disabled dropdown-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <i>
              Clear selection
            </i>
          </button>
        </div>
      </div>
    </div>
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 me-3 dropdown-toggle btn btn-link"
          type="button"
        >
          Paginate
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              50
            </b>
             items per page
          </button>
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              100
            </b>
             items per page
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              200
            </b>
             items per page
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              500
            </b>
             items per page
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i>
              Clear pagination
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card-body"
  >
    <canvas
      height="0"
      role="img"
      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
      width="0"
    />
  </div>
  <div
    class="chart-card__footer--sticky card-footer"
  >
    <nav
      aria-label="pagination"
      class=""
    >
      <ul
        class="flex-wrap mb-0 simple-paginator justify-content-center pagination"
      >
        <li
          class="page-item disabled"
        >
          <span
            aria-label="Previous"
            class="page-link"
          >
            <span
              aria-hidden="true"
            >
              ‹
            </span>
            <span
              class="visually-hidden"
            >
              Previous
            </span>
          </span>
        </li>
        <li
          class="page-item active"
        >
          <span
            class="page-link"
            role="link"
          >
            1
          </span>
        </li>
        <li
          class="page-item"
        >
          <span
            class="page-link"
            role="link"
          >
            2
          </span>
        </li>
        <li
          class="page-item"
        >
          <span
            aria-label="Next"
            class="page-link"
          >
            <span
              aria-hidden="true"
            >
              ›
            </span>
            <span
              class="visually-hidden"
            >
              Next
            </span>
          </span>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<SortableBarChartCard /> renders properly paginated stats when pagination is set 3`] = `
<div
  class="card"
  role="document"
>
  <div
    class="chart-card__header card-header"
  >
    Foo
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Order by
        </button>
        <div
          aria-hidden="true"
          class="w-100 ordering-dropdown__menu--link dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Name
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Amount
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="disabled dropdown-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <i>
              Clear selection
            </i>
          </button>
        </div>
      </div>
    </div>
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 me-3 dropdown-toggle btn btn-link"
          type="button"
        >
          Paginate
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              50
            </b>
             items per page
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              100
            </b>
             items per page
          </button>
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              200
            </b>
             items per page
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              500
            </b>
             items per page
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i>
              Clear pagination
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card-body"
  >
    <canvas
      height="0"
      role="img"
      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
      width="0"
    />
  </div>
</div>
`;

exports[`<SortableBarChartCard /> renders properly paginated stats when pagination is set 4`] = `
<div
  class="card"
  role="document"
>
  <div
    class="chart-card__header card-header"
  >
    Foo
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Order by
        </button>
        <div
          aria-hidden="true"
          class="w-100 ordering-dropdown__menu--link dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Name
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Amount
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="disabled dropdown-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <i>
              Clear selection
            </i>
          </button>
        </div>
      </div>
    </div>
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 me-3 dropdown-toggle btn btn-link"
          type="button"
        >
          Paginate
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              50
            </b>
             items per page
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              100
            </b>
             items per page
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              200
            </b>
             items per page
          </button>
          <button
            class="dropdown-item active"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <b>
              500
            </b>
             items per page
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <i>
              Clear pagination
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card-body"
  >
    <canvas
      height="0"
      role="img"
      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
      width="0"
    />
  </div>
</div>
`;

exports[`<SortableBarChartCard /> renders stats unchanged when no ordering is set 1`] = `
<div
  class="card"
  role="document"
>
  <div
    class="chart-card__header card-header"
  >
    Foo
    <div
      class="float-end"
    >
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="btn-sm p-0 dropdown-toggle btn btn-link"
          type="button"
        >
          Order by
        </button>
        <div
          aria-hidden="true"
          class="w-100 ordering-dropdown__menu--link dropdown-menu dropdown-menu-end"
          role="menu"
          tabindex="-1"
        >
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Name
          </button>
          <button
            class="dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            Amount
          </button>
          <div
            class="dropdown-divider"
            tabindex="-1"
          />
          <button
            class="disabled dropdown-item"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <i>
              Clear selection
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card-body"
  >
    <canvas
      height="0"
      role="img"
      style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
      width="0"
    />
  </div>
</div>
`;
